<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="96dp"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="12dp"
    android:layout_marginRight="16dp"
    android:clickable="true"
    android:foreground="?selectableItemBackground"
    card_view:cardBackgroundColor="#C2C8EC"
    card_view:cardCornerRadius="8dp"
    card_view:contentPadding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="73dp"
                android:layout_height="20dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:text="@string/Wish_item" />

            <TextView
                android:id="@+id/wish_item"
                android:layout_width="115dp"
                android:layout_height="20dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:text="@string/item_name" />

            <TextView
                android:layout_width="49dp"
                android:layout_height="20dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:text="@string/Price" />

            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="16dp"
                android:gravity="end|center_vertical"
                android:text="@string/Price_num" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="80dp"
                android:layout_height="36dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="0dp"
                android:text="@string/Description" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="top"
                android:text="@string/Description_text" />

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>